force-app/main/default/objects/Product2/fields/ProductCode_Custom__c.field-meta.xml
<CustomField>
    <fullName>ProductCode_Custom__c</fullName>
    <formula>LEFT(TEXT(SKU_Company__c), 3) &amp;
&quot;-&quot; &amp;
TEXT(SKU_BusinessUnit__c) &amp;
&quot;-&quot; &amp;
TEXT(SKU_LOB__c) &amp;
&quot;-&quot; &amp;
TEXT(SKU_Category__c) &amp;
&quot;-&quot; &amp;
TEXT(SKU_Product__c) &amp;
&quot;-&quot; &amp;
TEXT(SKU_Subproduct__c) &amp;
&quot;-&quot; &amp;
LPAD(TEXT(SKU_Sequence__c), 3, &quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProductCode_Custom</label>
    <type>Text</type>
</CustomField>