force-app/main/default/objects/Product2/fields/Service_Category__c.field-meta.xml
<CustomField>
    <fullName>Service_Category__c</fullName>
    <formula>IF(ISPICKVAL(SKU_LOB__c, &quot;DESK&quot;), &quot;Service Desk&quot;,
IF(ISPICKVAL(SKU_LOB__c, &quot;INFR&quot;), &quot;Infrastructure&quot;,
IF(ISPICKVAL(SKU_LOB__c, &quot;CYBR&quot;), &quot;Cybersecurity&quot;,
IF(ISPICKVAL(SKU_LOB__c, &quot;HOST&quot;), &quot;Private Cloud&quot;,
IF(ISPICKVAL(SKU_LOB__c, &quot;SUBS&quot;), &quot;Subscriptions&quot;,
IF(ISPICKVAL(SKU_LOB__c, &quot;VOIP&quot;), &quot;VOIP&quot;,
&quot;&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Category</label>
    <type>Text</type>
</CustomField>