force-app/main/default/objects/Product2/fields/Service_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Service_Sub_Category__c</fullName>
    <formula>IF(ISPICKVAL(SKU_Product__c, &quot;ENPT&quot;), &quot;Endpoint Management&quot;,
IF(ISPICKVAL(SKU_Product__c, &quot;NTWK&quot;), &quot;Network Management&quot;,
IF(ISPICKVAL(SKU_Product__c, &quot;CLOD&quot;), &quot;Cloud&quot;,
IF(ISPICKVAL(SKU_Product__c, &quot;SECD&quot;), &quot;Security&quot;,
IF(ISPICKVAL(SKU_Product__c, &quot;HDSK&quot;), &quot;Help Desk&quot;,
IF(ISPICKVAL(SKU_Product__c, &quot;BCDR&quot;), &quot;Backup &amp; DR&quot;,
IF(ISPICKVAL(SKU_Product__c, &quot;VCIO&quot;), &quot;vCIO Advisory&quot;,
IF(ISPICKVAL(SKU_Product__c, &quot;PRJT&quot;), &quot;Project Delivery&quot;,
&quot;&quot;))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Sub-Category</label>
    <type>Text</type>
</CustomField>