force-app/main/default/objects/Product2/fields/SKU_BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>SKU_BusinessUnit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MS</fullName>
            </value>
            <value>
                <fullName>PS</fullName>
            </value>
            <value>
                <fullName>PROD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>