force-app/main/default/objects/Product2/fields/SKU_Category__c.field-meta.xml
<CustomField>
    <fullName>SKU_Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SVC</fullName>
            </value>
            <value>
                <fullName>LIC</fullName>
            </value>
            <value>
                <fullName>ASC</fullName>
            </value>
            <value>
                <fullName>INF</fullName>
            </value>
            <value>
                <fullName>MSL</fullName>
            </value>
            <value>
                <fullName>RES</fullName>
            </value>
            <value>
                <fullName>ADJ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>