force-app/main/default/objects/Product2/fields/SKU_Company__c.field-meta.xml
<CustomField>
    <fullName>SKU_Company__c</fullName>
    <label>Company Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001 - Ascend</fullName>
            </value>
            <value>
                <fullName>002 - Edafio</fullName>
            </value>
            <value>
                <fullName>003 - NvYA</fullName>
            </value>
            <value>
                <fullName>00N - future</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>