force-app/main/default/objects/Product2/fields/SKU_LOB__c.field-meta.xml
<CustomField>
    <fullName>SKU_LOB__c</fullName>
    <label>Line of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DESK</fullName>
            </value>
            <value>
                <fullName>INFR</fullName>
            </value>
            <value>
                <fullName>CYBR</fullName>
            </value>
            <value>
                <fullName>HOST</fullName>
            </value>
            <value>
                <fullName>SUBS</fullName>
            </value>
            <value>
                <fullName>VOIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>