force-app/main/default/objects/Product2/fields/SKU_Product__c.field-meta.xml
<CustomField>
    <fullName>SKU_Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ENPT</fullName>
            </value>
            <value>
                <fullName>NTWK</fullName>
            </value>
            <value>
                <fullName>CLOD</fullName>
            </value>
            <value>
                <fullName>SECD</fullName>
            </value>
            <value>
                <fullName>HDSK</fullName>
            </value>
            <value>
                <fullName>BCDR</fullName>
            </value>
            <value>
                <fullName>VCIO</fullName>
            </value>
            <value>
                <fullName>PRJT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>