force-app/main/default/objects/Product2/fields/SKU_Sequence__c.field-meta.xml
<CustomField>
    <fullName>SKU_Sequence__c</fullName>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>