force-app/main/default/objects/Product2/fields/SKU_Subproduct__c.field-meta.xml
<CustomField>
    <fullName>SKU_Subproduct__c</fullName>
    <label>Subproduct</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MGMT</fullName>
            </value>
            <value>
                <fullName>PROT</fullName>
            </value>
            <value>
                <fullName>MNTR</fullName>
            </value>
            <value>
                <fullName>PTCH</fullName>
            </value>
            <value>
                <fullName>BKUP</fullName>
            </value>
            <value>
                <fullName>RPRT</fullName>
            </value>
            <value>
                <fullName>ONBD</fullName>
            </value>
            <value>
                <fullName>SHLD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>