force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>Service_Family__c</columns>
    <columns>Service_Offering__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>SNOW_Service_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Services</label>
</ListView>